<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    -->

    <LinearLayout
        android:id="@+id/title"
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:id="@+id/logoRel" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/logo"
                android:maxHeight="50dp"
                android:padding="10dp" />
            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_alignLeft="@id/logoRel"
                android:layout_alignTop="@id/logoRel"
                android:layout_alignRight="@id/logoRel"
                android:layout_alignBottom="@id/logoRel"
                android:layout_margin="1dp"
                android:padding="10dp"
                android:textIsSelectable="false" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center"
            android:id="@+id/subRel" >

            <ImageView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/subtitle"
                android:maxHeight="50dp"
                android:padding="10dp" />
            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_alignLeft="@id/subRel"
                android:layout_alignTop="@id/subRel"
                android:layout_alignRight="@id/subRel"
                android:layout_alignBottom="@id/subRel"
                android:layout_margin="1dp"
                android:padding="10dp"
                android:textIsSelectable="false" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone">
        
        <!-- <WebView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/waiting"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>

</LinearLayout>